--- a/test/test-template.html
+++ b/test/test-template.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Integration of the NQL Webpack Bundle Test</title>
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
-    <h1> Well done learning more about Webpack </h1>
+    <h1>Test: Integration of the NQL Webpack Bundle (nql.js) in a Web Browser Application.</h1>
     <script type="text/javascript" src="../dist/nql.js"></script>
     <script type="text/javascript" charset="UTF-8">
 
